--- a/Release/makefile
+++ b/Release/makefile
@@ -50,14 +50,14 @@ all: SocketCAN-cpp
 # Tool invocations
 SocketCAN-cpp: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
-	@echo 'Invoking: MinGW C++ Linker'
+	@echo 'Invoking: GCC C++ Linker'
 	g++  -o "SocketCAN-cpp" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(OBJS)$(C_UPPER_DEPS)$(CXX_DEPS)$(CPP_DEPS)$(C_DEPS) SocketCAN-cpp
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) SocketCAN-cpp
 	-@echo ' '
 
 .PHONY: all clean dependents
